[project]
name = "akto-agent-guard-worker"
version = "0.1.0"
description = "Akto Agent Guard — LLM cascade + local scanners (Cloudflare Worker or FastAPI)"
requires-python = ">=3.12"
dependencies = [
    # cascade auth + HTTP
    "rsa",
    "pyasn1",
    "httpx",
    # local scanners
    "detect-secrets",
    "tiktoken",
    # portable HTTP server
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[dependency-groups]
dev = [
    "workers-py",
]
