[project]
name = "akto-agent-guard-worker"
version = "0.1.0"
description = "Akto Agent Guard — LLM cascade + local scanners (Cloudflare Worker or FastAPI)"
requires-python = ">=3.12"
dependencies = [
    # cascade auth + HTTP
    "rsa",
    "pyasn1",
    "httpx",
    # local scanners
    "detect-secrets",
    "tiktoken",
    # portable HTTP server
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    # metrics
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
]

[dependency-groups]
dev = [
    "workers-py",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "cryptography",
    "pre-commit",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["src/vocab_blob.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E731"]  # allow lambda assignment

[tool.ruff.lint.per-file-ignores]
# LLM prompt templates — long prose lines, not code to wrap.
"src/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["src/vocab_blob.py"]