[project]
name = "akto-agent-guard-worker"
version = "0.1.0"
description = "Akto Agent Guard — LLM cascade + local scanners (Cloudflare Worker or FastAPI)"
requires-python = ">=3.12"
dependencies = [
    # cascade auth + HTTP
    "rsa==4.9.1",
    "pyasn1==0.6.3",
    "httpx==0.28.1",
    # local scanners
    "detect-secrets==1.5.0",
    "tiktoken==0.13.0",
    # portable HTTP server
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "pydantic==2.13.4",
    "psutil==7.2.2",
]

[dependency-groups]
dev = [
    "workers-py==1.14.0",
    "ruff==0.15.21",
    "mypy==2.2.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "cryptography==49.0.0",
    "pre-commit==4.6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["src/vocab_blob.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E731"]  # allow lambda assignment

[tool.ruff.lint.per-file-ignores]
# LLM prompt templates — long prose lines, not code to wrap.
"src/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["src/vocab_blob.py"]